Enhance CPU drift demo with realistic production error scenarios
- Show actual UnsupportedOperationException that would occur in production
- Add detailed diagnostic information including CPU architecture details
- Include production log examples that would appear in real deployments
- Enhanced demo script with better explanations of failure scenarios
- Added try-catch blocks to demonstrate real Vector API exception handling
- Improved documentation of when and why these failures occur in production